jvmfwk/plugins/sunmajor/pluginlib/util_cocoa.hxx
@@ -1,0 +1,6 @@
+#ifndef __UTIL_COCOA_H__
+#define __UTIL_COCOA_H__
+
+bool JvmfwkUtil_isLoadableJVM( OUString aURL );
+
+#endif
